--- a/src/components/Button/DecreaseButton/DecreaseButton.scss
+++ b/src/components/Button/DecreaseButton/DecreaseButton.scss
@@ -2,8 +2,21 @@
 
 .decrease-button {
   width: 30%;
-  background-color: $color-secondary;
+  background-color: $color-white;
+  color: $color-secondary;
   text-align: center;
   border-radius: 15px;
   padding: 5px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.decrease-button:hover {
+  background-color: $color-yellow;
+  color: $color-primary;
+  cursor: pointer;
+}
+
+.decrease-button:active {
+  transform: translateY(4px);
 }
