--- a/src/components/Counter/Counter.scss
+++ b/src/components/Counter/Counter.scss
@@ -6,9 +6,10 @@
   display: flex;
   flex-direction: column;
   border: 2px solid $color-secondary;
-  margin-top: 60px;
+  margin-top: 20px;
   padding: 30px;
   border-radius: 20px;
+  font-size: 16px;
   h2 {
     background-color: inherit;
     text-align: center;
@@ -17,6 +18,6 @@
   &__buttons {
     display: flex;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
   }
 }
