--- a/src/components/EmployeeCard/EmployeeCard.scss
+++ b/src/components/EmployeeCard/EmployeeCard.scss
@@ -2,11 +2,12 @@
 
 .employee-card {
   height: 400px;
-  width: 200px;
-  border: 4px solid $color-gray;
+  width: 260px;
+  border: 4px solid $color-primary;
   margin: 20px;
   padding: 10px;
   background-color: $color-black;
   color: $color-white;
   border-radius: 20px;
+  font-size: 14px;
 }
