--- a/src/components/EmployeeCard/EmployeeCard.scss
+++ b/src/components/EmployeeCard/EmployeeCard.scss
@@ -3,7 +3,7 @@
 .employee-card {
   height: 400px;
   width: 260px;
-  border: 4px solid $color-primary;
+  border-top: 3px solid $color-primary;
   margin: 20px;
   padding: 10px;
   background-color: $color-black;
