--- a/src/components/Counter/Counter.scss
+++ b/src/components/Counter/Counter.scss
@@ -15,6 +15,10 @@
     text-align: center;
   }
 
+  &__number {
+    text-align: center;
+  }
+
   &__buttons {
     display: flex;
     justify-content: center;
