--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: $color-gray;
 }
 
 @media screen and (min-width: 992px) {
@@ -11,5 +12,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding: 0 30px;
   }
 }
